Stackless-Python News
+++++++++++++++++++++

This file documents user visible changes to the Stackless extension of C-Python.
For other changes see Misc/NEWS.

What's New in Stackless 3.X.X?
==============================

*Release date: 20XX-XX-XX*

- https://github.com/stackless-dev/stackless/issues/146
  Always initialize _stackless.bonb type. Prevents a NULL-pointer access,
  if a thread terminates with a MemoryError exception.

- https://github.com/stackless-dev/stackless/issues/145
  Fix the upper bound of tests in test/test_doctest.py.

- https://github.com/stackless-dev/stackless/issues/144
  Replace copied code in pricklepit.c dictview_new.

- https://github.com/stackless-dev/stackless/issues/143
  Fix non-portable usage of bit fields.

- https://github.com/stackless-dev/stackless/issues/141
  Call Py_DECREF(frame) with the right recursion_depth.

- https://github.com/stackless-dev/stackless/issues/137
  C-API: All functions of the form Py{Object, Function, CFunction}_*Call* now
  use STACKLESS_PROMOTE_xxx internally and may be called with
  slp_try_stackless != 0. See the comment in core/stackless_impl.h.

- https://github.com/stackless-dev/stackless/issues/133
  WARNING: C-extension modules written for Stackless Python must be recompiled
  for Stackless Python 3.6, because definition of METH_STACKLESS changed.

- https://github.com/stackless-dev/stackless/issues/140
  Fix bugs in prickelpit.c unwrap_frame_arg() and slp_find_execname().

- https://github.com/stackless-dev/stackless/issues/138
  Correctly propose Stackless calls for C-functions.

- https://github.com/stackless-dev/stackless/issues/136
  Replace 'xrange' with 'range' in *.py. Python 3 has no xrange.

- https://github.com/stackless-dev/stackless/issues/135
  Fix small memory leaks for types with Stackless extensions.

- https://bitbucket.org/stackless-dev/stackless/issues/130
  Pickling exhausted generators no longer crashes.

- https://bitbucket.org/stackless-dev/stackless/issues/129