@@ -9,6 +9,10 @@ What's New in Stackless 3.X.X?
 
 *Release date: 20XX-XX-XX*
 
+- https://github.com/stackless-dev/stackless/issues/150
+  The prototype of PyStackless_GetCurrentId(void) was missing from
+  stackless_api.h. It is now defined.
+
 - https://github.com/stackless-dev/stackless/issues/146
   Always initialize _stackless.bonb type. Prevents a NULL-pointer access,
   if a thread terminates with a MemoryError exception.
